# rtos-course

./: .gitignore  CMakeLists.txt  README.md  setup.sh
FreeRTOSv10.4.1/: CMakeLists.txt
FreeRTOSv10.4.1/FreeRTOS/: CMakeLists.txt
FreeRTOSv10.4.1/FreeRTOS/Demo/Posix_GCC/: Trace.dump  main_full.c
common/: FreeRTOSConfig.h
template/: CMakeLists.txt  main.c
